--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <script src="JavaScript/app.js"></script>
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
-    <script src="JavaScript/app.js"></script>
   </head>
 <body>
    <div class="container" ng-controller='LunchCheckController'>
@@ -23,8 +23,9 @@
          </div>
          <div class="form-group message">
            <!-- Your message can go here. -->
+           <div ng-show="!empty && checked" class="alert alert-success">{{message}}</div>
+           <div ng-show="empty" class="alert alert-danger">Please enter data first</div>
          </div>
    </div>
-
 </body>
 </html>
